--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BASE_UR=https://event-hub-backend-cm9g.onrender.com/api/v1
-VITE_BASE_URL=http://localhost:8081/api/v1
+VITE_BASE_URL=https://event-hub-backend-cm9g.onrender.com/api/v1
+
