--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^7.8.0",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "date-fns": "^2.27.0",
     "dayjs": "^1.11.11",
     "flowbite-react": "^0.10.1",
     "moment": "^2.30.1",
